objects/copado__Continuous_Integration_Permission__c.object
<CustomObject>
    <fields>
        <fullName>copado__Access__c</fullName>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Run Continuous Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Continuous_Integration__c</fullName>
        <label>Continuous Integration</label>
        <referenceTo>copado__Continuous_Integration__c</referenceTo>
        <relationshipLabel>Continuous Integration Permissions</relationshipLabel>
        <relationshipName>Continuous_Integration_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>copado__Email_Notification__c</fullName>
        <label>Email Notification</label>
        <picklist>
            <picklistValues>
                <fullName>On Build Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Build Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Deploy Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Deploy Success</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>copado__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Continuous Integration Permissions</relationshipLabel>
        <relationshipName>Continuous_Integration_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Continuous Integration Permission</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Continuous_Integration__c</columns>
        <columns>copado__User__c</columns>
        <columns>copado__Access__c</columns>
        <columns>copado__Email_Notification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CIP-{00000}</displayFormat>
        <label>Permission Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Continuous Integration Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>